Spaced repetition works, I think limit of words works.

--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,7 @@ a{
     text-decoration:none;
     color: black;
     float: left;
-    font-family: Arial Black, Arial;
+    font-family:  Arial Black, Helvetica, Verdana, sans-serif;
 }
 
 .header .nav{
@@ -65,7 +65,7 @@ a{
     text-decoration:none;
     color: black;
     float: left;
-    font-family: Arial Black;
+    font-family:  Arial Black, Helvetica, Verdana, sans-serif;
 }
 
 .header .user_info{
@@ -75,7 +75,7 @@ a{
     height: 100%;
     float: right;
     position: relative;
-    font-family: Arial Black, Arial;
+    font-family:  Arial Black, Helvetica, Verdana, sans-serif;
     font-size: .75em;
     text-align: center;
 }
@@ -97,7 +97,7 @@ a{
     min-height : 500px;
 }
 .content{
-    font-family: ARIAL BLACK, Arial;
+    font-family:  Arial Black, Helvetica, Verdana, sans-serif;
     text-align: center;
     margin: 1em auto 0;
     width: 80%;
@@ -129,7 +129,7 @@ a{
     width: 315px;
     margin: 0 auto;    
     height: 55px;
-    font-family: Arial Black, Arial;
+    font-family:  Arial Black, Helvetica, Verdana, sans-serif
 }
 
 .login .form_wrapper .top .labels{
@@ -157,20 +157,20 @@ a{
 
 .login .form_wrapper .bottom{
     top: 0; left: 0; bottom: 0; right: 0;
-    font-family: Arial Black, Arial;
+    font-family:  Arial Black, Helvetica, Verdana, sans-serif;
     width: 315px;
     margin: 0 auto;
     height: 30px;
 }
 
 .login .form_wrapper .bottom input{
-    font-family: Arial Black, Arial;
+    font-family:  Arial Black, Helvetica, Verdana, sans-serif;
     float: right;
 }
 
 .login .form_wrapper .bottom a{
     text-decoration: none;
-    font-family: Arial Black, Arial;
+    font-family: Arial Black, Helvetica, Verdana, sans-serif;
     float: left;
 }
 .game_container{
@@ -209,12 +209,12 @@ a{
     float: left;
 }
 .menu .center .lang{
-    font-family: Arial Black, Arial;
+    font-family: Arial Black, Helvetica, Verdana, sans-serif;
     padding-bottom: .5em;
 }
 .menu .center .lang select{
     border-radius: 3px;
-    font-family: Arial Black, Arial;
+    font-family: Arial Black, Helvetica, Verdana, sans-serif;
     font-size: 1.5em;
     height: 1.6em;
     width: 5.5em;
@@ -230,14 +230,14 @@ a{
 .right{
     float: left;
     width: 18%;
-    font-family: Arial Black, Arial;
+    font-family: Arial Black, Helvetica, Verdana, sans-serif;
     margin-left: 2%;
 }
 .input_area{
     float: left;
     height: 25px;
     width: 325px;
-    font-family: Arial Black, Arial;
+    font-family: Arial Black, Helvetica, Verdana, sans-serif;
 }
 .ui_top{
     width: 100%;
@@ -247,7 +247,7 @@ a{
 .input_area .label{
     float: left;
     margin-bottom: 50%;
-    font-family: Arial Black, Arial;
+    font-family: Arial Black, Helvetica, Verdana, sans-serif;
 }
 #defense-code{
     margin-left: .5em;
@@ -263,13 +263,13 @@ a{
 .word_area .label{
     float: left;
     margin-bottom: 50%;    
-    font-family: Arial Black, Arial;
+    font-family: Arial Black, Helvetica, Verdana, sans-serif;
 }
 .new_word_list{
     margin-left: .5em;
     float: left;
     height: 25px;
-    font-family: Arial Black, Arial;
+    font-family: Arial Black, Helvetica, Verdana, sans-serif;
 }
 .old_word_list{
     float: left;
@@ -321,7 +321,7 @@ a{
     width: 20%;
     float: left;
     height: 50%;
-    font-family: ARIAL BLACK, Arial;
+    font-family: Arial Black, Helvetica, Verdana, sans-serif;
     margin-top: 2.5%;
 }
 
@@ -331,7 +331,7 @@ a{
     float: right;
     text-align: right;
     height: 50%;
-    font-family: ARIAL BLACK, Arial;
+    font-family: Arial Black, Helvetica, Verdana, sans-serif;
     margin-top: 2.5%;
 }
 
@@ -379,7 +379,7 @@ a{
     width: 465px;
     margin: 0 auto;    
     height: 250px;
-    font-family: Arial Black, Arial;
+    font-family: Arial Black, Helvetica, Verdana, sans-serif;
 }
 
 .register .form_wrapper .top .labels{
@@ -412,19 +412,19 @@ a{
 
 .register .form_wrapper .bottom{
     top: 0; left: 0; bottom: 0; right: 0;
-    font-family: Arial Black, Arial;
+    font-family: Arial Black, Helvetica, Verdana, sans-serif;
     width: 315px;
     margin: 0 auto;
     height: 30px;
 }
 
 .register .form_wrapper .bottom input{
-    font-family: Arial Black, Arial;
+    font-family: Arial Black, Helvetica, Verdana, sans-serif;
 }
 
 .register .form_wrapper .bottom a{
     text-decoration: none;
-    font-family: Arial Black, Arial;
+    font-family: Arial Black, Helvetica, Verdana, sans-serif;
     float: left;
 }
 .tutorial{
@@ -464,7 +464,7 @@ a{
 .menu #lose_menu .text{
     position: absolute;
     text-align: center;
-    font-family: Arial Black, Arial;
+    font-family: Arial Black, Helvetica, Verdana, sans-serif;
     font-size: 2.5em;
     top: 15%;
     left: 35.5%;
