--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@ body{
     width: 100%;
     margin: 0;    
     float: left;
+    font-weight: 900;
 }
 div{
     margin: 0;
@@ -10,6 +11,10 @@ div{
 .error{
     color : red;
     font-size: 1em;
+}
+.left{
+    float:left;
+    text-align: left;
 }
 a{
     margin: 0;
@@ -33,9 +38,8 @@ a{
 
 .header .logo a{
     position: absolute;
-    top: 50%;
-    left: 50%;
-    margin: -15% 0 0 -25%;
+    left: 15%;
+    top: -5%;
     font-size: 40px;
     text-decoration:none;
     color: black;
@@ -53,6 +57,7 @@ a{
 .header .nav .game{
     width: 10%;
     height: 100%;
+    margin-right: 2em;
     float: right; 
     position: relative;    
 }
@@ -318,15 +323,24 @@ a{
 }
 .footer .left{
     margin-left: 5%;
-    width: 20%;
+    width: 25%;
     float: left;
     height: 50%;
     font-family: Arial Black, Helvetica, Verdana, sans-serif;
     margin-top: 2.5%;
 }
-
+.footer .social{
+    width: 5%;
+    height:50%;
+    margin-top:2%;
+    margin-left: 5%;
+    float: left;
+}
+.footer .social #fb-root{
+    float: left;
+}
 .footer .right{
-    width: 60%;
+    width: 50%;
     margin-right: 5%;
     float: right;
     text-align: right;
@@ -494,7 +508,7 @@ a{
 }
 
 .showcase{
-    margin-left: 77px;
+    margin-left: 35px;
     position: relative;
     width: 914px;
     border: solid;
@@ -513,4 +527,58 @@ a{
 .play_now a{
     text-decoration: none;
     color: black;
+}
+
+.pages{
+    width: 100%;
+    float: left;
+}
+
+.pagination{
+    width: auto;
+    position: relative;
+    float: left;
+    margin: 0 auto;
+    left: 28%;
+}
+
+.pagination ul{
+    max-width: 600px;
+    text-decoration:none;
+    float: left;
+    list-style-type: none;
+}
+.pagination ul li{
+    float: left;
+    list-style-type: none;
+    margin-left: .75em;
+}
+
+.pagination ul a{
+    text-decoration: none;
+    color: black;
+}
+
+.pagination ul a:visited{
+    color: darkslategrey;
+}
+
+.pagination ul .active{
+    background-color: black;
+    color:white;
+    border-radius: 5px;
+    padding-left: .15em;
+    padding-right: .15em;
+}
+.word_list{
+    width: 100%;
+    height: auto;
+    float: left;
+}
+
+.word_list .entry{
+    width: 33.3%;
+    float: left;
+    height: auto;
+    
 }
